# spreadsheet-chart-vue

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  DIRECTORY_OPTIMIZATION.md  PROJECT_PROCEED.md  README.md  backup_and_migrate.py  check_data_record_detail.py  check_sheets_data.py  package-lock.json  package.json  pyproject.toml
.devcontainer/scripts/: setup.sh
.github/workflows/: ci-lint-typecheck.yml  ci.yml
backend/: requirements.txt
backend/backend/: settings.py  urls.py
backend/sheets/: manual_updater.py  report_generator.py
backend/sheets_api/: urls.py  views.py
data-collector/: .gitignore  README.md  main.py  pyproject.toml  test_permissions.py
data-collector/collectors/: chart_generator.py  chart_image_generator.py  currency_converter.py  interactive_chart_generator.py  report_generator.py  sheets_writer.py  stock_collector.py
data-collector/config/: settings.py
data-collector/output/: blog_draft_2026_01.md
data-collector/output/2026_01_charts/: 2432_T_interactive.html  7974_T_interactive.html  NVDA_interactive.html  interactive_chart.html
data-collector/schedulers/: __init__.py  monthly_runner.py
data-collector/templates/: blog_template.md
docs/: REDESIGN_PLAN.md  api-reference.md  data-collection-guide.md  deployment-plan.md  google-sheets-setup.md  project-structure.md  sheets-schema.md
docs/monthly-reports/: README.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: LineChart.vue  LineChart2.vue  Spreadsheet.vue  Spreadsheet2.vue
frontend/src/components/charts/: ProfitChart.vue
frontend/src/components/portfolio/: PortfolioDashboard.vue
frontend/src/composables/: usePortfolioData.js  useSpreadsheetData.js
frontend/src/views/: ManualInput.vue  MonthlyReport.vue
portfolio-dashboard/: package-lock.json  package.json
portfolio-dashboard/.github/workflows/: ci.yml
portfolio-dashboard/client/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
portfolio-dashboard/client/src/: App.tsx  globals.css  main.tsx
portfolio-dashboard/client/src/components/currency/: CurrencyLineChart.tsx
portfolio-dashboard/client/src/components/dashboard/: AllocationChart.tsx  AllocationTrendChart.tsx  LatestBarChart.tsx
portfolio-dashboard/client/src/components/dividend/: DividendTable.tsx
portfolio-dashboard/client/src/components/history/: BenchmarkChart.tsx  ProfitAreaChart.tsx  StockCompareChart.tsx  StockFilter.tsx
portfolio-dashboard/client/src/components/layout/: AppLayout.tsx
portfolio-dashboard/client/src/components/portfolio/: HoldingsTable.tsx
portfolio-dashboard/client/src/lib/: api.ts  formatters.ts
portfolio-dashboard/client/src/pages/: Currency.tsx  Dashboard.tsx  Dividend.tsx  History.tsx  Portfolio.tsx  ReportDetail.tsx  Reports.tsx
portfolio-dashboard/collector/: .env.example  main.py  pyproject.toml
portfolio-dashboard/collector/collectors/: ai_comment.py  benchmark_collector.py  block_converter.py  chart_generator.py  currency_converter.py  db_writer.py  report_generator.py  sheets_sync.py  stock_collector.py  stock_utils.py  template_engine.py  wp_publisher.py
portfolio-dashboard/collector/config/: settings.py
portfolio-dashboard/collector/templates/: blog_template.md
portfolio-dashboard/deploy/: Caddyfile  backup.sh  portfolio.service  setup.sh
portfolio-dashboard/scripts/: migrate_from_sheets.py  requirements.txt
portfolio-dashboard/server/: drizzle.config.ts  package.json
portfolio-dashboard/server/drizzle/migrations/: 0000_wise_morgan_stark.sql  0001_add_purchase_history.sql
portfolio-dashboard/server/src/: index.ts
portfolio-dashboard/server/src/__tests__/: routes.test.ts
portfolio-dashboard/server/src/db/: index.ts  queries.ts  schema.ts
portfolio-dashboard/server/src/routes/: benchmark.ts  currency.ts  dashboard.ts  dividend.ts  exposure.ts  history.ts  portfolio.ts  reports.ts
script/: stock_app.py
scripts/: api_health_check.py  api_health_check.sh
shared/: __init__.py  sheets_config.py
src/: App.vue
src/components/: LineChart.vue  ProfitChart.vue  StockTable.vue
tests/: test_fx_calculation.py
web-app/backend/: .dockerignore  .env.example  DEPLOY_CLOUD_RUN.md  Dockerfile  README.md  cloudbuild.yaml  main.py  pyproject.toml
web-app/backend/app/: config.py  reports.py
web-app/backend/app/routers/: benchmark.py  currency.py  dashboard.py  dividend.py  exposure.py  history.py  portfolio.py  reports.py
web-app/backend/app/schemas/: benchmark.py  currency.py  dashboard.py  dividend.py  exposure.py  history.py  portfolio.py  reports.py
web-app/backend/app/sheets/: client.py  currency.py  dividend.py  performance.py  portfolio.py  utils.py
web-app/backend/backend/: settings.py  urls.py
web-app/backend/portfolio/: services.py  urls.py  views.py
web-app/backend/sheets/: currency_views.py  manual_updater.py  report_generator.py  urls.py  views.py
web-app/backend/templates/: api_index.html  report_template.html
web-app/backend/tests/: test_benchmark.py  test_cagr.py  test_profit_calc.py  test_utils.py
web-app/frontend/: .env.development  .env.example  .env.production  DEPLOY_CONOHA.md  README.md  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web-app/frontend/public/: .htaccess
web-app/frontend/src/: App.vue  env.d.ts
web-app/frontend/src/app/: layout.tsx  page.tsx
web-app/frontend/src/app/currency/: page.tsx
web-app/frontend/src/app/dividend/: page.tsx
web-app/frontend/src/app/history/: page.tsx
web-app/frontend/src/app/reports/: page.tsx
web-app/frontend/src/assets/: main.css
web-app/frontend/src/composables/: useChartExport.js  useDataValidation.js  usePortfolioData.js  useSpreadsheetData.js
web-app/frontend/src/lib/: api.ts  chartUtils.test.ts  chartUtils.ts  formatters.test.ts  formatters.ts
web-app/frontend/src/router/: index.js
web-app/frontend/src/types/: api.ts  charts.ts  index.ts
web-app/frontend/src/utils/: api.js  calculations.js
web-app/frontend/src/views/: Dashboard.vue
(+25 files in other folders)
