[project]
name = "portfolio-data-collector"
version = "0.1.0"
description = "Portfolio data collection system"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.18",
    "pandas>=2.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E", "W", "F", "I", "B", "C4", "UP"
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
