[project]
name = "portfolio-data-collector"
version = "0.1.0"
description = "Portfolio data collection system"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.18",
    "pandas>=2.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "gspread>=6.2.1",
    "google-auth>=2.40.3",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["collectors", "config", "schedulers"]

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ANN"
]
# ANN101/ANN102は削除されたルールなので除外不要

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty]
# ty設定（Astral社製の超高速型チェッカー）

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
