[project]
name = "backend"
version = "0.1.0"
description = "投資ポートフォリオ管理 Django Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2.17",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "google-api-python-client>=2.108.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "python-dotenv>=1.0.0",
    "gspread>=6.2.1",
    "pandas>=2.1.0",
    "gunicorn>=21.2.0",
]
