[project]
name = "backend"
version = "0.1.0"
description = "投資ポートフォリオ管理 Django Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2.17",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.0",
    "google-api-python-client>=2.108.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "python-dotenv>=1.0.0",
    "gspread>=6.2.1",
    "pandas>=2.1.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-django>=4.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sheets", "portfolio"]

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP"
]
extend-ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty]
# ty設定（Astral社製の超高速型チェッカー）

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
